--- a/package.json
+++ b/package.json
@@ -7,8 +7,13 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.25.0",
+    "laravel-vue-pagination": "^3.0.0",
     "vue": "^3.2.13",
+    "vue-axios": "^3.4.1",
+    "vue-loader": "^17.0.0",
     "vue-router": "^4.0.3",
+    "vue-sweetalert2": "^5.0.5",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
